avoid directly initializing Integer-objects